[gd_scene load_steps=4 format=3 uid="uid://m6f1y2fu3sq"]

[ext_resource type="Script" path="res://prog_76a.gd" id="1_d2wcp"]

[sub_resource type="LabelSettings" id="LabelSettings_4abm7"]
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_pfce7"]
font_size = 20
font_color = Color(1, 0.266667, 0.0117647, 1)

[node name="prog_76a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d2wcp")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 520.0
offset_right = 312.0
offset_bottom = 608.0
text = "Calculate"

[node name="Button2" type="Button" parent="."]
offset_left = 448.0
offset_top = 520.0
offset_right = 712.0
offset_bottom = 608.0
text = "Clear"

[node name="Button3" type="Button" parent="."]
offset_left = 816.0
offset_top = 520.0
offset_right = 1080.0
offset_bottom = 608.0
text = "Close"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 32.0
offset_right = 851.0
offset_bottom = 104.0
text = "Enter a number you despise (1-9):"
label_settings = SubResource("LabelSettings_4abm7")

[node name="Label2" type="Label" parent="."]
offset_left = 464.0
offset_top = 144.0
offset_right = 632.0
offset_bottom = 480.0
label_settings = SubResource("LabelSettings_pfce7")
horizontal_alignment = 2

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 920.0
offset_top = 16.0
offset_right = 1120.0
offset_bottom = 136.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
